deploy: c4fe88ee6fe3aac28096e8176936da3139797a63

--- a/algebra/gcd.html
+++ b/algebra/gcd.html
@@ -151,8 +151,8 @@
 }
 </code></pre>
 <h1 id="lcm"><a class="header" href="#lcm">LCM</a></h1>
-<p>Returns the least common multiplier of a and b. <br />
-Required snippets: <a href="#gcd">GCD</a></p>
+<p>Returns the least common multiplier of a and b.</p>
+<p>Required snippets: <a href="#gcd">GCD</a></p>
 <pre><code class="language-rust noplayground">pub fn lcm(a: i64, b: i64) -&gt; i64 {
     a / gcd(a, b) * b
 }
