--- a/algebra/millerrabin.html
+++ b/algebra/millerrabin.html
@@ -140,8 +140,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="miller-rabin-primality-test"><a class="header" href="#miller-rabin-primality-test">Miller-Rabin Primality Test</a></h1>
-<p>Deterministic Miller-Rabin primality test determines whether a certain unsigned integer is a prime or not within \(O(\log{n})\) time. This test only works for integers under \(2^{64}\). <br />
-Required snippets: <a href="../misc/zero_one_trait.html#Zero">Zero</a>, <a href="../misc/zero_one_trait.html#One">One</a></p>
+<p>Deterministic Miller-Rabin primality test determines whether a certain unsigned integer is a prime or not within \(O(\log{n})\) time. This test only works for integers under \(2^{64}\).</p>
+<p>Required snippets: <a href="../misc/zero_one_trait.html#zeroone-trait">ZeroOne</a></p>
 <pre><code class="language-rust noplayground">use std::ops::{BitAnd, Mul, Rem, RemAssign, ShrAssign};
 
 trait Cast&lt;T&gt; {
