--- a/misc/psbase.html
+++ b/misc/psbase.html
@@ -141,123 +141,133 @@
                     <main>
                         <h1 id="base-template"><a class="header" href="#base-template">Base Template</a></h1>
 <h2 id="wo-testcases"><a class="header" href="#wo-testcases">w/o Testcases</a></h2>
-<pre><code class="language-rust noplayground">use std::io::*;
+<pre><code class="language-rust noplayground">use std::{
+    io::*,
+    str::{FromStr, SplitWhitespace},
+};
 
 fn main() {
     let stdin = std::fs::File::open(&quot;input.txt&quot;).ok().unwrap();
-    let handle = BufReader::new(stdin);
+    let mut handle = BufReader::new(stdin);
     // let stdin = stdin();
-    // let handle = stdin.lock();
-    let mut scan = Scanner::new(handle);
+    // let mut handle = stdin.lock();
+    let mut input_str = String::new();
+    handle
+        .read_to_string(&amp;mut input_str)
+        .expect(&quot;Failed to read&quot;);
+    let mut scan = Scanner::new(&amp;input_str);
     let out = &amp;mut BufWriter::new(stdout());
 }
 
-struct Scanner&lt;R&gt; {
-    _reader: R,
-    buffer: Vec&lt;String&gt;,
+struct Scanner&lt;'a&gt; {
+    input: SplitWhitespace&lt;'a&gt;,
 }
 
-impl&lt;R&gt; Scanner&lt;R&gt;
-where
-    R: BufRead,
-{
-    fn new(mut reader: R) -&gt; Self {
-        let mut input = String::new();
-        reader.read_to_string(&amp;mut input).expect(&quot;Failed to read&quot;);
-
-        let mut buffer = Vec::new();
-        buffer.extend(input.split_whitespace().rev().map(String::from));
-
+impl&lt;'a&gt; Scanner&lt;'a&gt; {
+    fn new(s: &amp;'a str) -&gt; Self {
         Self {
-            _reader: reader,
-            buffer,
+            input: s.split_whitespace(),
         }
     }
 
     #[allow(dead_code)]
     #[inline(always)]
-    fn next&lt;T&gt;(&amp;mut self) -&gt; T
-    where
-        T: std::str::FromStr,
-    {
-        match self.buffer.pop() {
-            Some(token) =&gt; token.parse().ok().expect(&quot;Failed to parse&quot;),
-            None =&gt; panic!(&quot;Input is all drained&quot;),
-        }
+    fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
+        self.input
+            .next()
+            .expect(&quot;Input has been exhausted&quot;)
+            .parse()
+            .ok()
+            .expect(&quot;Failed to parse&quot;)
     }
 
     #[allow(dead_code)]
     #[inline(always)]
-    fn next_option&lt;T&gt;(&amp;mut self) -&gt; Option&lt;T&gt;
-    where
-        T: std::str::FromStr,
-    {
-        match self.buffer.pop() {
-            Some(token) =&gt; token.parse().ok(),
+    fn next_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        let token = self.input.next();
+        match token {
+            Some(s) =&gt; s.parse().ok(),
             None =&gt; None,
         }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_str(&amp;mut self) -&gt; &amp;'a str {
+        self.input.next().expect(&quot;Input has been exhausted&quot;)
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_str_option(&amp;mut self) -&gt; Option&lt;&amp;'a str&gt; {
+        self.input.next()
     }
 }
 </code></pre>
 <h2 id="w-testcases"><a class="header" href="#w-testcases">w/ Testcases</a></h2>
-<pre><code class="language-rust noplayground">use std::io::*;
+<pre><code class="language-rust noplayground">use std::{
+    io::*,
+    str::{FromStr, SplitWhitespace},
+};
 
 fn main() {
     let stdin = std::fs::File::open(&quot;input.txt&quot;).ok().unwrap();
-    let handle = BufReader::new(stdin);
+    let mut handle = BufReader::new(stdin);
     // let stdin = stdin();
-    // let handle = stdin.lock();
-    let mut scan = Scanner::new(handle);
+    // let mut handle = stdin.lock();
+    let mut input_str = String::new();
+    handle
+        .read_to_string(&amp;mut input_str)
+        .expect(&quot;Failed to read&quot;);
+    let mut scan = Scanner::new(&amp;input_str);
     let out = &amp;mut BufWriter::new(stdout());
 
     let tc: usize = scan.next();
     for _ in 0..tc {}
 }
 
-struct Scanner&lt;R&gt; {
-    _reader: R,
-    buffer: Vec&lt;String&gt;,
+struct Scanner&lt;'a&gt; {
+    input: SplitWhitespace&lt;'a&gt;,
 }
 
-impl&lt;R&gt; Scanner&lt;R&gt;
-where
-    R: BufRead,
-{
-    fn new(mut reader: R) -&gt; Self {
-        let mut input = String::new();
-        reader.read_to_string(&amp;mut input).expect(&quot;Failed to read&quot;);
-
-        let mut buffer = Vec::new();
-        buffer.extend(input.split_whitespace().rev().map(String::from));
-
+impl&lt;'a&gt; Scanner&lt;'a&gt; {
+    fn new(s: &amp;'a str) -&gt; Self {
         Self {
-            _reader: reader,
-            buffer,
+            input: s.split_whitespace(),
         }
     }
 
     #[allow(dead_code)]
     #[inline(always)]
-    fn next&lt;T&gt;(&amp;mut self) -&gt; T
-    where
-        T: std::str::FromStr,
-    {
-        match self.buffer.pop() {
-            Some(token) =&gt; token.parse().ok().expect(&quot;Failed to parse&quot;),
-            None =&gt; panic!(&quot;Input is all drained&quot;),
-        }
+    fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
+        self.input
+            .next()
+            .expect(&quot;Input has been exhausted&quot;)
+            .parse()
+            .ok()
+            .expect(&quot;Failed to parse&quot;)
     }
 
     #[allow(dead_code)]
     #[inline(always)]
-    fn next_option&lt;T&gt;(&amp;mut self) -&gt; Option&lt;T&gt;
-    where
-        T: std::str::FromStr,
-    {
-        match self.buffer.pop() {
-            Some(token) =&gt; token.parse().ok(),
+    fn next_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        let token = self.input.next();
+        match token {
+            Some(s) =&gt; s.parse().ok(),
             None =&gt; None,
         }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_str(&amp;mut self) -&gt; &amp;'a str {
+        self.input.next().expect(&quot;Input has been exhausted&quot;)
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_str_option(&amp;mut self) -&gt; Option&lt;&amp;'a str&gt; {
+        self.input.next()
     }
 }
 </code></pre>
