--- a/print.html
+++ b/print.html
@@ -1625,17 +1625,19 @@ fn main() {
     let out = &amp;mut BufWriter::new(stdout());
 }
 
-struct Scanner&lt;'a&gt; {
-    input: SplitWhitespace&lt;'a&gt;,
+struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
+    input: I,
 }
 
-impl&lt;'a&gt; Scanner&lt;'a&gt; {
+impl&lt;'a&gt; Scanner&lt;'a, SplitWhitespace&lt;'a&gt;&gt; {
     fn new(s: &amp;'a str) -&gt; Self {
         Self {
             input: s.split_whitespace(),
         }
     }
+}
 
+impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
     #[inline(always)]
     fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
         self.input
@@ -1688,17 +1690,19 @@ fn main() {
     for _ in 0..tc {}
 }
 
-struct Scanner&lt;'a&gt; {
-    input: SplitWhitespace&lt;'a&gt;,
+struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
+    input: I,
 }
 
-impl&lt;'a&gt; Scanner&lt;'a&gt; {
+impl&lt;'a&gt; Scanner&lt;'a, SplitWhitespace&lt;'a&gt;&gt; {
     fn new(s: &amp;'a str) -&gt; Self {
         Self {
             input: s.split_whitespace(),
         }
     }
+}
 
+impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
     #[inline(always)]
     fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
         self.input
