deploy: c8c24c23e34cd508a508bf642f1e9ff8d2e93cfe

--- a/misc/psbase.html
+++ b/misc/psbase.html
@@ -160,6 +160,9 @@ fn main() {
     let out = &amp;mut BufWriter::with_capacity(262144, stdout.lock());
 
     macro_rules! next {
+        () =&gt; {
+            scan.next()
+        };
         ($t:ty) =&gt; {
             scan.next::&lt;$t&gt;()
         };
@@ -229,6 +232,9 @@ fn main() {
     let out = &amp;mut BufWriter::with_capacity(262144, stdout.lock());
 
     macro_rules! next {
+        () =&gt; {
+            scan.next()
+        };
         ($t:ty) =&gt; {
             scan.next::&lt;$t&gt;()
         };
