--- a/print.html
+++ b/print.html
@@ -1626,6 +1626,9 @@ fn main() {
     let out = &amp;mut BufWriter::with_capacity(262144, stdout.lock());
 
     macro_rules! next {
+        () =&gt; {
+            scan.next()
+        };
         ($t:ty) =&gt; {
             scan.next::&lt;$t&gt;()
         };
@@ -1695,6 +1698,9 @@ fn main() {
     let out = &amp;mut BufWriter::with_capacity(262144, stdout.lock());
 
     macro_rules! next {
+        () =&gt; {
+            scan.next()
+        };
         ($t:ty) =&gt; {
             scan.next::&lt;$t&gt;()
         };
