--- a/print.html
+++ b/print.html
@@ -1760,32 +1760,23 @@ impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
 }
 
 macro_rules! impl_zero_one {
-    ($ty:ty) =&gt; {
-        impl ZeroOne for $ty {
-            #[inline(always)]
-            fn one() -&gt; Self {
-                1
+    ($($ty:ty), *) =&gt; {
+        $(
+            impl ZeroOne for $ty {
+                #[inline(always)]
+                fn one() -&gt; Self {
+                    1
+                }
+                #[inline(always)]
+                fn zero() -&gt; Self {
+                    0
+                }
             }
-            #[inline(always)]
-            fn zero() -&gt; Self {
-                0
-            }
-        }
+        )*
     };
 }
 
-impl_zero_one!(isize);
-impl_zero_one!(i8);
-impl_zero_one!(i16);
-impl_zero_one!(i32);
-impl_zero_one!(i64);
-impl_zero_one!(i128);
-impl_zero_one!(usize);
-impl_zero_one!(u8);
-impl_zero_one!(u16);
-impl_zero_one!(u32);
-impl_zero_one!(u64);
-impl_zero_one!(u128);
+impl_zero_one!(isize, i8, i16, i32, i64, i128, usize, u8, u16, u32, u64, u128);
 </code></pre>
 
                     </main>
