deploy: ace8cf68e9da5312ffe22b4aee1def897ebf58cf

--- a/algebra/crt.html
+++ b/algebra/crt.html
@@ -191,7 +191,7 @@ fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
 }
 
 /// Returns $x$ s.t. $x=r_i (mod m_i)$ for all $i$
-pub fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
     let (mut x, mut m_prod) = (0, 1);
     for (bi, mi) in r.iter().zip(m.iter()) {
         let (g, s, _) = ext_gcd(m_prod, *mi);
