--- a/graphs/dsu.html
+++ b/graphs/dsu.html
@@ -145,7 +145,7 @@
 <li>Add an undirected edge between two nodes (<code>union</code>)</li>
 <li>Determine if there exist a path between two nodes (<code>is_reachable</code>)</li>
 </ul>
-<pre><code class="language-rust noplayground">pub struct UnionFind {
+<pre><code class="language-rust noplayground">struct UnionFind {
     size: usize,
     parents: Vec&lt;usize&gt;,
     group_size: Vec&lt;usize&gt;,
@@ -154,7 +154,7 @@
 
 impl UnionFind {
     /// Returns a new UnionFind instance where `size` number of elements are in their own disjoint set.
-    pub fn new(size: usize) -&gt; Self {
+    fn new(size: usize) -&gt; Self {
         Self {
             size,
             parents: vec![size; size],
@@ -164,13 +164,13 @@ impl UnionFind {
     }
 
     /// Returns the number of nodes which can be reached from x.
-    pub fn get_group_size(&amp;mut self, x: usize) -&gt; usize {
+    fn get_group_size(&amp;mut self, x: usize) -&gt; usize {
         let root = self.find_root(x);
         self.group_size[root]
     }
 
     /// Returns the number of connected components.
-    pub fn get_group_num(&amp;self) -&gt; usize {
+    fn get_group_num(&amp;self) -&gt; usize {
         self.group_num
     }
 
@@ -184,12 +184,12 @@ impl UnionFind {
     }
 
     /// Returns true if there exists a path from a to b.
-    pub fn is_reachable(&amp;mut self, a: usize, b: usize) -&gt; bool {
+    fn is_reachable(&amp;mut self, a: usize, b: usize) -&gt; bool {
         self.find_root(a) == self.find_root(b)
     }
 
     /// Add an edge between a and b.
-    pub fn union(&amp;mut self, a: usize, b: usize) {
+    fn union(&amp;mut self, a: usize, b: usize) {
         let a_root = self.find_root(a);
         let b_root = self.find_root(b);
 
